--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,10 @@
     color:white;
     background-color: blue;
 }
+.container{
+    color: black;
+    background-color: lightgray;
+}
+.Para2{
+    color: red;
+}
